tests improvements